--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -53,20 +53,22 @@
 }
 
 .introcontent {
-  height: inherit;
-  width: 40%;
-  border: 2px black dotted;
+  height: 12rem;
+  width: 25%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  align-items: flex-start;
+  padding-top: 8rem;
+  padding-left: 24px;
+
 }
 
 .startbutton {
+  margin-top: 2rem;
   background-color: grey;
   width: 17rem;
   display: flex;
   justify-content: center;
-  margin: auto;
 }
 
 .starttext {
@@ -74,4 +76,23 @@
   padding-bottom: 8px;
  color: white;
  margin: auto;
+}
+
+#textformat1 {
+font-weight: bolder;
+color: grey;
+font-size: 2rem;
+}
+
+#textformat2 {
+  color: grey;
+  font-size: 1.5rem;
+  padding-top: 1rem;
+}
+
+/* beginning of information section */
+
+.infosection {
+  display: flex;
+  width: 100%;
 }
