--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -163,3 +163,34 @@
 #bottomborder {
   border-bottom: solid 2px lightgrey;
 }
+
+/* beginning of courses section */
+
+.learningsection {
+  width: 940px;
+  background-color: lightgrey;
+}
+
+.softwareengineeringpic {
+
+}
+
+.computerartpic {
+
+}
+
+.designpic {
+
+}
+
+.datapic {
+
+}
+
+.businesspic {
+
+}
+
+.marketingpic {
+
+}
