--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,10 +1,20 @@
+html {
+  font-size: 18px;
+}
+
 /* header section stuff */
+
+
 
 .header {
   height: 64px;
   display: flex;
   justify-content: space-between;
   width: 100%;
+}
+
+.mobilenav  {
+  display: none;
 }
 
 .logosection {
@@ -136,6 +146,10 @@
   margin: 16px;
 }
 
+.mobilepicformat {
+  display: none;
+}
+
 .infosectioncontent {
    padding-top: 24px;
 }
@@ -189,6 +203,11 @@
   margin-top: 32px;
   margin-bottom: 32px;
 }
+
+.coursesmobile {
+  display: none;
+}
+
 .courses {
   display: flex;
 }
@@ -230,7 +249,6 @@
 /* middle column */
 
 .middlecolumn {
-
    width: 300px;
    padding-left: 32px;
    padding-right: 32px;
@@ -331,4 +349,190 @@
 .footernav a {
    padding-left: 16px;
    padding-top: 16px;
+}
+
+
+/*mobile support */
+
+@media only screen and (max-width: 480px) {
+
+  .header {
+    width: 100%;
+    
+  }
+
+  .headernav {
+    display: none;
+  }
+
+  .logosection {
+    display: none;
+  }
+
+  .mobilenav {
+    display: flex;
+    justify-content: space-between;
+  }
+
+   .mobilepicturemove {
+     padding-left: 2.5rem;
+     padding-right: 2.5rem;
+   }
+
+   .introsection {
+     width: 480px;
+     display: block;
+   }
+
+   .bannerimage {
+     width: 480px;
+     height: 300px;
+     margin: 0;
+   }
+
+   .introcontent {
+     height: auto;
+     width: 480px;
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
+     padding-top: 32px;
+     padding-left: 16px;
+   }
+
+   .startbutton {
+      background-color: grey;
+      width: 420px;
+      height: 48px;
+   }
+
+   .starttext {
+      color: white;
+      font-weight: bolder;
+   }
+
+   .leftside {
+      display: none;
+   }
+
+   .infosectioncontent {
+      padding-top: 16px;
+      padding-left: 16px;
+      padding-bottom: 32px;
+   }
+
+   .infocontentbox {
+     display: block;
+     width: 420px;
+     padding: 0;
+     margin: auto;
+   }
+
+   .infoboxtext {
+     padding-left: 16px;
+     line-height: 28px;
+   }
+
+   #greybackground {
+     background-color: white;
+   }
+
+
+   #topborder {
+     border: 0;
+   }
+
+   #bottomborder {
+     border: 0;
+   }
+
+   .infoimageformat {
+     display: none;
+   }
+
+   .mobilepicformat {
+     display: flex;
+     width: 420px;
+     height: 190px;
+   }
+
+  .textformat4 {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+
+  .learningsection {
+    border-top: lightgrey 2px solid;
+    background-color: white;
+    border-bottom: lightgrey 2px solid;
+  }
+
+  .learningtitle {
+     font-size: 2.5rem;
+
+  }
+
+  .courses {
+    display: none;
+  }
+
+  .coursesmobile {
+     display: block;
+     padding-bottom: 32px;
+  }
+
+  .mobilebutton {
+    background-color: lightgrey;
+    width: 420px;
+  }
+
+  .mobilebuttontext {
+     font-size: 1.7rem;
+     margin-bottom: 8px;
+     padding-top: 24px;
+     padding-left: 16px;
+     padding-bottom: 24px;
+  }
+
+  .videoformat {
+    padding: 0;
+    margin: 0;
+}
+
+  video {
+    width: 460px;
+    margin-bottom: 24px;
+  }
+
+  .thesistitle {
+    font-weight: bolder;
+    color: grey;
+    font-size: 2.5rem;
+    margin-top: 32px;
+    margin-bottom: 0;
+    text-align: center;
+  }
+
+  .thesistextformat {
+    display: none;
+  }
+
+   .thesisrightside {
+     display: none;
+   }
+
+  .footernav {
+    display: none;
+  }
+
+
+  .footersection {
+    border-top: 0;
+  }
+
+  .trademarkformatting {
+    padding-left: 24px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
 }
